Changes: added quality section animation change name of html quality section ex.buns_pc,buns_sp

--- a/src/scss/object/component/_animation.scss
+++ b/src/scss/object/component/_animation.scss
@@ -1,52 +1,90 @@
-.tk_burger_parent {
-    position: relative;
-}
-
 .fade-left-in {
-    animation: fade-left-in .5s linear both;
+    animation: fade-left-in .5s ease-out both;
 }
 
 .fade-left-out {
-    animation: fade-left-out .5s linear both;
+    animation: fade-left-out .5s ease-in both;
 }
 
 .fade-right-in {
-    animation: fade-right-in .5s linear both;
+    animation: fade-right-in .5s ease-out both;
 }
 
 .fade-right-out {
-    animation: fade-right-out .5s linear both;
-}
-
-.fade-right-in02 {
-    animation: fade-right-in02 .5s linear both;
-}
-
-.fade-right-out02 {
-    animation: fade-right-out02 .5s linear both;
+    animation: fade-right-out .5s ease-in both;
 }
 
 
+
+.shake {
+	animation: shake 0.8s both;
+}
+.zoome{
+    animation : zoome, shake;
+    animation-duration: .5s , 0.5s;
+    animation-timing-function:ease-in-out;
+}
+
+
+
+@keyframes shake{
+  0%,
+  100% {
+    transform: translateX(0%);
+    transform-origin: 50% 50%;
+  }
+  15% {
+    transform: translateX(-30px) rotate(-6deg);
+  }
+  30% {
+    transform: translateX(15px) rotate(6deg);
+  }
+  45% {
+    transform: translateX(-15px) rotate(-3.6deg);
+  }
+  60% {
+    transform: translateX(9px) rotate(2.4deg);
+  }
+  75% {
+    transform: translateX(-6px) rotate(-1.2deg);
+  }
+}
+
+@keyframes zoome{
+    0%{
+        transform:scale(0);
+    }
+    50%{
+        transform:scale(1.5);
+    }
+    100%{
+        transform:scale(1);
+    }
+}
 
 
 
 @keyframes fade-left-in {
     0% {
         transform: translateX(100%);
+        opacity:0.8;
     }
 
     100% {
         transform: translateX(0%);
+        opacity:1;
     }
 }
 
 @keyframes fade-left-out {
     0% {
         transform: translateX(0%);
+        opacity:1;
     }
 
     100% {
         transform: translateX(100%);
+        opacity:0.8;
     }
 }
 
@@ -54,40 +92,23 @@
     0% {
 
         left: -29.571vw;
+        opacity:0.8;
     }
 
     100% {
         left: 29.571vw;
+        opacity:1;
     }
 }
 
 @keyframes fade-right-out {
     0% {
         left: 29.571vw;
+        opacity:1;
     }
 
     100% {
         left: -29.571vw;
-    }
-}
-
-@keyframes fade-right-in02 {
-    0% {
-
-        left: -56%;
-    }
-
-    100% {
-        left: 56%;
-    }
-}
-
-@keyframes fade-right-out02 {
-    0% {
-        left:56%;
-    }
-
-    100% {
-        left: -56%;
+        opacity:0.8;
     }
 }
