--- a/src/scss/object/component/_animation.scss
+++ b/src/scss/object/component/_animation.scss
@@ -1,17 +1,17 @@
 .fade-left-in {
-    animation: fade-left-in .5s ease-out both;
+    animation: fade-left-in .5s cubic-bezier(0.5, 1, 0.89, 1) both;
 }
 
 .fade-left-out {
-    animation: fade-left-out .5s ease-in both;
+    animation: fade-left-out .5s cubic-bezier(0.11, 0, 0.5, 0) both;
 }
 
 .fade-right-in {
-    animation: fade-right-in .5s ease-out both;
+    animation: fade-right-in .5s cubic-bezier(0.5, 1, 0.89, 1) both;
 }
 
 .fade-right-out {
-    animation: fade-right-out .5s ease-in both;
+    animation: fade-right-out .5s cubic-bezier(0.11, 0, 0.5, 0) both;
 }
 
 
@@ -22,7 +22,7 @@
 .zoome{
     animation : zoome, shake;
     animation-duration: .5s , 0.5s;
-    animation-timing-function:ease-in-out;
+    animation-timing-function:cubic-bezier(0.45, 0, 0.55, 1);
 }
 
 
@@ -67,7 +67,7 @@
 @keyframes fade-left-in {
     0% {
         transform: translateX(100%);
-        opacity:0.8;
+        opacity:0;
     }
 
     100% {
@@ -84,7 +84,7 @@
 
     100% {
         transform: translateX(100%);
-        opacity:0.8;
+        opacity:0;
     }
 }
 
@@ -92,7 +92,7 @@
     0% {
 
         left: -29.571vw;
-        opacity:0.8;
+        opacity:0;
     }
 
     100% {
@@ -109,6 +109,6 @@
 
     100% {
         left: -29.571vw;
-        opacity:0.8;
+        opacity:0;
     }
 }
